# soliton

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  README_v2.md  TECHNICAL_WRITEUP.md  glider_patterns.json  glider_patterns.py  theory Rule110.thy.txt  triangle_patterns.json  triangle_patterns.py
rule110-frontend/: index.html  package-lock.json  package.json  vite.config.js
rule110-frontend/scripts/: catchup-tile.ts  check-tiles.ts  close-by-address.ts  close-tile.ts  force-undelegate.ts  initialize-tile.ts  initialize.js  program-undelegate.ts  reinitialize.ts  wire-neighbors.ts
rule110-frontend/src/: canvas.js  main.js  solana-bridge.js  style.css
rule110-frontend/src/elm/: Main.elm  Ports.elm
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: integration.rs
